fix another missing text-align

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -282,6 +282,7 @@
         align-items: center;
         color: #fff;
         background-color: #000;
+        text-align: center;
 
         .row {
             display: grid;
